# pebble

./: .gitignore  README.md  package-lock.json  package.json  pebble-style-guide.html  render.yaml
.claude/agents/: backend-engineering-expert.md  frontend-engineer.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/new-branch/: SKILL.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20260315000001_init.sql  20260315000002_transactions_and_tags.sql
backend/scripts/: start_db.sh
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/auth/: extractor.rs  jwt.rs  password.rs
backend/src/handlers/: auth.rs  mod.rs  transactions.rs  user.rs
backend/src/models/: transaction.rs  user.rs
frontend/: index.html  package-lock.json  package.json
frontend/public/favicon/: site.webmanifest
frontend/src/: App.tsx
frontend/src/components/layout/: AppLayout.module.css  AppLayout.tsx
frontend/src/components/ui/: Button.module.css  Button.tsx  CategoryTag.module.css  CategoryTag.tsx  Input.module.css  Input.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  validation.ts
frontend/src/pages/Dashboard/: Dashboard.module.css  Dashboard.tsx
frontend/src/pages/Login/: Login.module.css  Login.tsx
frontend/src/pages/Onboarding/: Onboarding.module.css  Onboarding.tsx
frontend/src/pages/Profile/: Profile.module.css  Profile.tsx
frontend/src/pages/Signup/: Signup.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: dev-ready.js
(+2 files in other folders)
