[package]
name = "pebble-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pebble-backend"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.8", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.6", features = ["cors", "trace"] }
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
argon2          = "0.5"
jsonwebtoken    = "9"
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
rust_decimal    = "1"
dotenvy         = "0.15"
envy            = "0.4"
thiserror       = "2"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
